# sleeper-trade-engine

./: .gitignore  README.md  app.py  generate_trades.py  pyproject.toml
config/: __init__.py  config.yml
engine/: engine.py
utils/: combinatorics.py  data.py  scoring.py  timing.py
