[tool.poetry]
name = "sleeper-trade-engine"
version = "0.1.0"
description = ""
authors = ["Nick Milikich <nickmilikich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sleeper = "^1.7.0"
streamlit = "^1.28.0"
envyaml = "^1.10.211231"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
